# nobo

./: .gitignore  README.md  __init__.py  base.py  fixja.py  io.py  manaba.py  requirements.txt  setting.json  setting.json.example  setup.cfg  syllabus.py
Example Data/: courselist.json  syllabus.json
example/: course.json  syllabus.json
lib/: __init__.py  base.py  fixja.py
nobo/: __init__.py  base.py  fixja.py  io.py  manaba.py  syllabus.py
nobo/lib/: base.py  fixja.py
