[metadata]
name = nobo
version = attr: nobo.__init__.__version__
description = A spider for fetching data from Manaba
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0
author = fang2hou
author_email = fang2hou@outlook.com
maintainer = eggplants
maintainer_email = w10776e8w@yahoo.co.jp
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
include_package_data = True
install_requires =
    types-requests
    types-beautifulsoup4
    types-selenium
    requests
    beautifulsoup4
    selenium

# [options.entry_points]
# console_scripts =

[yapf]
based_on_style = black

